# ViT2DeformCNN

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pylintrc.toml  pyproject.toml
docker/: Dockerfile
src/: train.py
src/configs/: train.yaml
src/datasets/: __init__.py  builder.py
src/models/: __init__.py  builder.py  definitions.py  resnet.py  student.py  teacher_student_model.py  utils.py  vgg.py
src/models/layers/: __init__.py  dcn_v2.py  utils.py
src/tests/: dataset_test.py  teacher_model_test.py
src/utils/: definitions.py
tests/: mock_test.py
