[tool.poetry]
name = "vit2deformcnn"
version = "0.1.0"
description = "A project that showcase the impact of having a student enabled via deformable convolution for a cross architecutre distillation process (VIT->CNN)."
authors = ["Victor-Mihai Macininc <victormacinic@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.0"
torchvision = "0.20.0"
torchaudio = "2.5.0"

[tool.poetry.group.dev.dependencies]
# Add your development dependencies here (e.g., testing, linters, etc.)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
