[tool.poetry]
name = "vit2deformcnn"
version = "0.1.0"
description = "A project that showcase the impact of having a student enabled via deformable convolution for a cross architecutre distillation process (VIT->CNN)."
authors = ["Victor-Mihai Macininc <victormacinic@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.2"
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.0"
torchvision = "0.20.0"
torchaudio = "2.5.0"
timm = "^1.0.14"
hydra-core = "^1.3.2"


[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
line-length = 120
include = '(atlassian|examples|tests)\/.*(\.py|GET|POST)'

[tool.mypy]
mypy_path = "src"
cache_dir = "/dev/null"
scripts_are_modules = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = "ignore-without-code"
strict = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["*_test.py"]
addopts = "--strict-markers"
filterwarnings = "error"
pythonpath = "src"
markers = [
    "primer_stdlib: Checks for crashes and errors when running pylint on stdlib",
    "benchmark: Baseline of pylint performance, if this regress something serious happened",
    "timeout: Marks from pytest-timeout.",
    "needs_two_cores: Checks that need 2 or more cores to be meaningful",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "src/train.py",
]

[tool.coverage.report]
fail_under = 100
